--- a/TodoApp/MainPage.xaml
+++ b/TodoApp/MainPage.xaml
@@ -1,18 +1,22 @@
-﻿<phone:PhoneApplicationPage 
-    x:Class="TodoApp.MainPage"
+﻿<phone:PhoneApplicationPage
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone"
     xmlns:shell="clr-namespace:Microsoft.Phone.Shell;assembly=Microsoft.Phone"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:ViewModels="clr-namespace:TodoApp.ViewModels" mc:Ignorable="d" d:DesignWidth="480" d:DesignHeight="768"
+    xmlns:ViewModels="clr-namespace:TodoApp.ViewModels" xmlns:ec="clr-namespace:Microsoft.Expression.Interactivity.Core;assembly=Microsoft.Expression.Interactions"
+    xmlns:local="clr-namespace:TodoApp.Common" x:Class="TodoApp.MainPage"
+    mc:Ignorable="d" d:DesignWidth="480" d:DesignHeight="768"
     FontFamily="{StaticResource PhoneFontFamilyNormal}"
     FontSize="{StaticResource PhoneFontSizeNormal}"
     Foreground="{StaticResource PhoneForegroundBrush}"
     SupportedOrientations="Portrait" Orientation="Portrait"
     shell:SystemTray.IsVisible="True"
     >
+    <phone:PhoneApplicationPage.Resources>
+        <local:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter"/>
+    </phone:PhoneApplicationPage.Resources>
 
     <phone:PhoneApplicationPage.DataContext>
         <ViewModels:MainViewModel/>
@@ -36,10 +40,19 @@
             <ListBox ItemsSource="{Binding Todos}">
                 <ListBox.ItemTemplate>
                     <DataTemplate>
-                        <StackPanel Orientation="Horizontal">
-                            <CheckBox IsChecked="{Binding IsDone}"/>
-                            <TextBlock Text="{Binding Title}"/>
-                        </StackPanel>
+                        <Grid>
+                            <Line Visibility="{Binding IsDone, Converter={StaticResource BoolToVisibilityConverter}}"
+                      X1="10" Y1="0" X2="1" Y2="0" 
+                      Stretch="UniformToFill"
+                      Stroke="White" StrokeThickness="2"
+                      Margin="50,5,8,0"/>
+                            <StackPanel Orientation="Horizontal">
+                                <CheckBox IsChecked="{Binding IsDone, Mode=TwoWay}">
+                                	<TextBlock Text="{Binding Title}" VerticalAlignment="Center" FontSize="29.333"/>
+                                </CheckBox>
+                            </StackPanel>
+
+                        </Grid>
                         
                     </DataTemplate>
                 </ListBox.ItemTemplate>
